--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ elasticsearch.port=9300
 elasticsearch.pool=5
 #注意cluster.name需要与config/elasticsearch.yml中的cluster.name一致
 elasticsearch.cluster.name=my-application
+spring.data.elasticsearch.cluster-nodes=node-1
 server.port=8181
